Tourist Experience refactor continues